[project]
name = "comfyui-nodes-hnmr"
description = "Provide various custom nodes for Latent, Sampling, Model, Loader, Image, Text. This is the fixed version of the original [a/ComfyUI-nodes-hnmr](https://github.com/hnmr293/ComfyUI-nodes-hnmr) by hnmr293."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/CYBERLOOM-INC/ComfyUI-nodes-hnmr"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-nodes-hnmr"
Icon = ""
